--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Megavideo</title>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="app.js"></script>
 </head>
-<body>
-	
-</body>
+	<body ng-app="megavideoApp">
+		<div id="container" ng-controller="megavideoCtrl">
+			<mega-video
+		    ogg="https://ia600500.us.archive.org/1/items/Duck_and_Cover/1951_duck_and_cover.ogv"
+		    mp4="https://archive.org/download/Duck_and_Cover/1951_duck_and_cover_512kb.mp4"
+		    width="500px">
+			</mega-video>
+		</div>
+		
+	</body>
 </html>
